[metadata]
name = tpRigToolkit-libs-controlrig
description = Library to manage controls for rigs
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.libs.controlrig.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-libs-controlrig

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    tpDcc-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1